feat: complete resignation notice period workflow, user manual, HTML UI updates, and CORS test config